--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,13 @@
     <title>React App</title>
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
+    <!-- Include this script tag in your HTML file -->
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+
+
     
   </head>
   <body>
